--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,26 @@
     package="pl.szop.andrzejshop">
 
     <application
-        android:name="pl.szop.andrzejshop.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="pl.szop.andrzejshop.views.HomeActivity">
+        <activity android:name=".views.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="pl.szop.andrzejshop.views.ProductsActivity" />
-        <activity android:name="pl.szop.andrzejshop.views.ProductDetailsActivity"></activity>
+        <activity android:name=".views.ProductsActivity" />
+        <activity android:name=".views.ProductDetailsActivity" />
+        <activity
+            android:name=".views.ImageActivity"
+            android:label="@string/title_activity_image"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
