--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="pl.szop.andrzejshop">
 
     <application
-        android:name=".MyApplication"
+        android:name="pl.szop.andrzejshop.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
